fixed minor issue with stove view overlapping that items

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -88,7 +88,7 @@
 #stove-view {
   background-image: url("../images/stove.jpg");
   width: 75vw;
-  height: 59vw; }
+  height: 60.45vw; }
   #stove-view .stock {
     top: 50%;
     left: 50%;
@@ -113,7 +113,7 @@
     width: 20%;
     height: 15%; }
 
-@media screen and (min-aspect-ratio: 14 / 11) {
+@media screen and (min-aspect-ratio: 100 / 59) {
   #stove-view {
     width: 127vh;
     height: 100vh; } }
